# releng-testresults

./: .gitignore  .gitreview  INFO.yaml
ci/: docker-update.sh  mongodb_backup.py  testapi-backup-mongodb.sh
ci/htmlize/: doc-build.sh  htmlize.py  push-doc-artifacts.sh
reporting/: requirements.txt
reporting/docker/: Dockerfile  nginx.conf  reporting.sh  supervisor.conf  web_server.sh
reporting/html/: euphrates.html  fraser.html  functest-fraser.html  functest.html  index.html  master.html
reporting/js/: gauge.js
reporting/reporting/: reporting.yaml
reporting/reporting/functest/: reporting-status.py  reporting-tempest.py  reporting-vims.py  testCase.py
reporting/reporting/qtip/template/: index-status-tmpl.html
reporting/reporting/vsperf/: reporting-status.py
reporting/reporting/yardstick/: reporting-status.py
reporting/reporting/yardstick/template/: index-status-tmpl.html
testapi/: .gitignore  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
testapi/docker/: Dockerfile  prepare-env.sh
testapi/docs/developer/devguide/: testapi-client-import.rst  testapi-client.rst  web-portal.rst
testapi/etc/: config.ini
testapi/opnfv_testapi/common/: check.py  constants.py  message.py  raises.py
testapi/opnfv_testapi/handlers/: base_handlers.py  deploy_result_handlers.py  pod_handlers.py  project_handlers.py  result_handlers.py  sign_handlers.py
testapi/opnfv_testapi/models/: base_models.py  deploy_result_models.py  pod_models.py  project_models.py  result_models.py  scenario_models.py  testcase_models.py
testapi/opnfv_testapi/router/: url_mappings.py
testapi/opnfv_testapi/tests/UI/e2e/: authenticateFalseSpec.js  deployResultsControllerSpec.js  homeControllerSpec.js  podsControllerSpec.js  projectControllerSpec.js  projectsControllerSpec.js  resultsControllerSpec.js  scenarioControllerSpec.js  scenariosControllerSpec.js  testCasesControllerSpec.js
testapi/opnfv_testapi/tests/unit/: executor.py  fake_pymongo.py
testapi/opnfv_testapi/tests/unit/common/: test_config.py
testapi/opnfv_testapi/tests/unit/handlers/: test_base.py  test_deploy_result.py  test_pod.py  test_project.py  test_result.py  test_scenario.py  test_testcase.py
testapi/opnfv_testapi/tests/unit/templates/: deploy_result.json  test_result.json  testcase_d.json  testcase_e.json
testapi/opnfv_testapi/ui/: Gruntfile.js  app.js  config.json  index.html  package.json
testapi/opnfv_testapi/ui/components/deploy-results/: deployResults.html  deployResultsController.js
testapi/opnfv_testapi/ui/components/deploy-results/deploy-result/: deployResult.html  deployResultController.js
testapi/opnfv_testapi/ui/components/profile/: profileController.js
testapi/opnfv_testapi/ui/components/projects/: projects.html  projectsController.js
testapi/opnfv_testapi/ui/components/projects/modals/: projectModal.html
testapi/opnfv_testapi/ui/components/projects/project/: project.html  projectController.js
testapi/opnfv_testapi/ui/components/results/: results.html  resultsController.js
testapi/opnfv_testapi/ui/components/results/result/: result.html  resultController.js
testapi/opnfv_testapi/ui/components/scenarios/: scenarios.html  scenariosController.js
testapi/opnfv_testapi/ui/components/scenarios/modals/: customModal.html  installerModal.html  projectModal.html  scenarioModal.html  scenarioNameUpdate.html  scoreModal.html  trustIndicatorModal.html  (+1 more)
testapi/opnfv_testapi/ui/projects/: projects.html  projectsController.js
testapi/opnfv_testapi/ui/projects/project/: project.html  updateModal.html
testapi/opnfv_testapi/ui/shared/alerts/: confirmModal.html  confirmModalFactory.js
testapi/opnfv_testapi/ui/shared/header/: header.html  headerController.js
testapi/testapi-client/: .stestr.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
testapi/testapi-client/etc/: client.creds  config.ini
testapi/testapi-client/testapiclient/: auth.py  authHandler.py  command.py  config.py  httpClient.py  http_client.py  identity.py  main.py  pods.py  projects.py
testapi/testapi-client/testapiclient/cli/: auth.py  deployresults.py  pods.py  projects.py  results.py  scenarios.py  testcases.py
testapi/testapi-client/testapiclient/client/: base.py  deploy_results.py  pods.py  projects.py  results.py  scenarios.py  testcases.py
testapi/testapi-client/testapiclient/models/: deployresult.py  pods.py  project.py  result.py  scenario.py  testcase.py
testapi/testapi-client/testapiclient/tests/unit/: fakes.py  test_app.py  test_deployresults.py  test_deployresults_client.py  test_placeholder.py  test_pod_client.py  test_pods.py  test_project_client.py  test_projects.py  test_results.py  test_results_client.py  test_scenario.py  test_scenario_client.py  test_scenario_custom.py  test_scenario_custom_client.py  test_scenario_installer.py  test_scenario_installer_client.py  test_scenario_project.py  test_scenario_project_client.py  test_scenario_score.py  test_scenario_score_client.py  test_scenario_trust_indicator.py  test_scenario_trust_indicator_client.py  test_scenario_version.py  test_scenario_version_client.py  test_testcase_client.py  test_testcases.py  utils.py
testapi/testapi-client/testapiclient/utils/: __init__.py  clientmanager.py  command.py  http_client.py  identity.py  url_parse.py  urlparse.py  user.py
(+7 files in other folders)
