[metadata]
name = testapi-client

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    testapiclient

[entry_points]
console_scripts =
    testapi = testapiclient.main:main

testapi =
    auth = testapiclient.auth:Auth
    pod create = testapiclient.pods:PodCreate
    pod get = testapiclient.pods:PodGet
    pod delete = testapiclient.pods:PodDelete
    pod getone = testapiclient.pods:PodGetOne

    project create = testapiclient.projects:ProjectCreate
    project get = testapiclient.projects:ProjectGet
    project getone = testapiclient.projects:ProjectGetOne
    project delete = testapiclient.projects:ProjectDelete
    project put = testapiclient.projects:ProjectPut

    testcase create = testapiclient.testcase:TestCaseCreate
    testcase get = testapiclient.testcase:TestCaseGet
    testcase delete = testapiclient.testcase:TestCaseDelete
    testcase put = testapiclient.testcase:TestCasePut

    scenario create = testapiclient.scenario:ScenarioCreate
    scenario get = testapiclient.scenario:ScenarioGet
    scenario delete = testapiclient.scenario:ScenarioDelete
    scenario put = testapiclient.scenario:ScenarioPut

    scenario addscore = testapiclient.scenario:ScenarioAddScore

    scenario addyi = testapiclient.scenario:ScenarioAddTI

    scenario addcustom = testapiclient.scenario:ScenarioAddCustom
    scenario updatecustom = testapiclient.scenario:ScenarioUpdateCustom
    scenario deletecustom = testapiclient.scenario:ScenarioDeleteCustom

    scenario addproject = testapiclient.scenario:ScenarioAddProject
    scenario deleteproject = testapiclient.scenario:ScenarioDeleteProject

    scenario addversion = testapiclient.scenario:ScenarioAddVersion
    scenario deleteversion = testapiclient.scenario:ScenarioDeleteVersion

    result get = testapiclient.results:ResultGet
[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
