[metadata]
name = testapi-client

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    testapiclient

[entry_points]
console_scripts =
    testapi = testapiclient.main:main

testapi =
    auth = testapiclient.cli.auth:Auth
    pod create = testapiclient.cli.pods:PodCreate
    pod get = testapiclient.cli.pods:PodGet
    pod delete = testapiclient.cli.pods:PodDelete
    pod getone = testapiclient.cli.pods:PodGetOne

    project create = testapiclient.cli.projects:ProjectCreate
    project get = testapiclient.cli.projects:ProjectGet
    project getone = testapiclient.cli.projects:ProjectGetOne
    project delete = testapiclient.cli.projects:ProjectDelete
    project put = testapiclient.cli.projects:ProjectPut

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
