[metadata]
name = testapi-client

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    testapiclient

[entry_points]
console_scripts =
    testapi = testapiclient.main:main

testapi =
    auth = testapiclient.cli.auth:Auth
    pod create = testapiclient.cli.pods:PodCreate
    pod get = testapiclient.cli.pods:PodGet
    pod delete = testapiclient.cli.pods:PodDelete
    pod getone = testapiclient.cli.pods:PodGetOne

    project create = testapiclient.cli.projects:ProjectCreate
    project get = testapiclient.cli.projects:ProjectGet
    project getone = testapiclient.cli.projects:ProjectGetOne
    project delete = testapiclient.cli.projects:ProjectDelete
    project put = testapiclient.cli.projects:ProjectPut

    testcase create = testapiclient.cli.testcases:TestcaseCreate
    testcase get = testapiclient.cli.testcases:TestcaseGet
    testcase getone = testapiclient.cli.testcases:TestcaseGetOne
    testcase delete = testapiclient.cli.testcases:TestcaseDelete
    testcase put = testapiclient.cli.testcases:TestcasePut

    scenario create = testapiclient.cli.scenarios:ScenarioCreate
    scenario get = testapiclient.cli.scenarios:ScenarioGet
    scenario getone = testapiclient.cli.scenarios:ScenarioGetOne
    scenario delete = testapiclient.cli.scenarios:ScenarioDelete
    scenario put = testapiclient.cli.scenarios:ScenarioPut

    scenario installer create = testapiclient.cli.scenarios:InstallerCreate
    scenario installer delete = testapiclient.cli.scenarios:InstallerDelete
    scenario installer put = testapiclient.cli.scenarios:InstallerPut

    scenario version create = testapiclient.cli.scenarios:VersionCreate
    scenario version delete = testapiclient.cli.scenarios:VersionDelete
    scenario version put = testapiclient.cli.scenarios:VersionPut

    scenario version owner put = testapiclient.cli.scenarios:VersionOwnerPut

    scenario project create = testapiclient.cli.scenarios:ProjectCreate
    scenario project delete = testapiclient.cli.scenarios:ProjectDelete
    scenario project put = testapiclient.cli.scenarios:ProjectPut

    scenario custom create = testapiclient.cli.scenarios:CustomCreate
    scenario custom delete = testapiclient.cli.scenarios:CustomDelete
    scenario custom put = testapiclient.cli.scenarios:CustomPut

    scenario trustindicator create = testapiclient.cli.scenarios:TrustIndicatorCreate

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
